dh-make-perl (0.59) UNRELEASED; urgency=low

  [ Damyan Ivanov ]
  * debian/rules: compact to (almost) 3 lines

  [ Salvatore Bonaccorso ]
  * Bump Standards-Version to 3.8.3 (dh-make-perl, tests and generated
    packages).
    - The requirement for Perl modules to have a versioned Depend and
      Build-Depend on perl >= 5.6.0-16 has been removed.

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Sun, 16 Aug 2009 12:03:22 +0200

dh-make-perl (0.58) unstable; urgency=low

  [ gregor herrmann ]
  * POD: add a notice that --notest was removed and the new way to skip tests
    is to add nocheck to the DEB_BUILD_OPTIONS environment variable
    (closes: #536733).

  [ Ansgar Burchardt ]
  * fix two typos in the documentation

  [ Damyan Ivanov ]
  * t/core-modules.t: add a bogus module test
  * corelist.t: do not iterate over modules in /usr/share|lib/perl/$VER
    some of the modules there aren't core, notably
    CPANPLUS::Config::System. Closes: #536989

 -- Damyan Ivanov <dmn@debian.org>  Tue, 04 Aug 2009 18:11:45 +0300

dh-make-perl (0.57) unstable; urgency=low

  [ Nathan Handler ]
  * Bump Standards-Version to 3.8.2
    + in debian/control (no changes needed)
    + in generated package's debian/control
    + in t/dists

  [ gregor herrmann ]
  * Change parsing of sources.list in Debian::AptContents to make it work with
    file:/ URIs, add a test. Thanks to Raphael Geissert for the bug report
    (closes: #535017).

  [ Salvatore Bonaccorso ]
  * Add myself to Uploaders 
  * Correct test in t/AptContents.t for file: schema.
  * Further improve gregoa's change and follow now that was apt-file is doing.
    (See #535017). 

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Sat, 04 Jul 2009 08:30:33 +0200

dh-make-perl (0.56) unstable; urgency=low

  [ gregor herrmann ]
  * Add the whole Debian::Dependency object to the deps hash in
    Debian::Dependencies' prune function instead of just the version; fixes